2012-03-18  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* runtime.cc (Runtime::Runtime): Call maybepostponedSetup ().

	* configuration.cc (MUSIC): Added comment with syntax of
	_MUSIC_CONFIG_.

2012-03-15  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/setup.hh, setup.cc (maybePostponedSetup, fullInit): New
	functions.

	* music/configuration.hh, configuration.cc
	(Configuration::postponeSetup): New function.

	* port.cc (Port::Port): Call maybepostponedSetup ().

2012-02-22  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/subconnector.h, subconnector.cc (Subconnector): Moved
	member flushed from InputSubconnector to Subconnector. Mark
	OutputSubconnectors as flushed once a flush message has been sent
	and only send the flush message once.

	* subconnector.cc (EventInputSubconnectorGlobal::receive)
	(EventInputSubconnectorLocal::receive): Check that message
	size > 0 before checking for FLUSH_MARK.

2011-11-24  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am (libmusic_la_LDFLAGS): Added libmpidep.la in order
	to support predictRank.

	* music/predict_rank.hh, predict_rank.cc: New files.

2011-01-31  Mikael Djurfeldt  <mdj@djurfeldt.com>

	* Makefile.am (libmusic_c_la_DEPENDENCIES): Added in order to
	support parallel builds.

2011-01-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* subconnector.cc (ContInputSubconnector::receive): Update receive
	buffer pointer for subsequent receives when large packages have
	been split.

	* BIFO.cc (BIFO::insertBlock): Fixes to logic when buffer has
	wrapped around.

2010-07-28  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.7

	* synchronizer.cc (Synchronizer::nextCommunication): Revert
	buggy handling of tight loops in change of 2009-10-23.

	* subconnector.cc
	(MessageOutputSubconnector::MessageOutputSubconnector): Bugfix:
	Initialize synchronizer pointer properly.

2009-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.6

	* ioutils.c, parse.cc: Added #include <cstdio>.
